--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,2 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
+<h1>Application Level</h1>
 {{outlet}}
-
